<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_click"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/top"
            style="@style/MatchWrap.Vertical"
            android:layout_alignParentBottom="true"
          >

            <TextView
                android:id="@+id/takePhotosTV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/take_photo"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@color/c_333333"
                android:textSize="14dp" />

            <View style="@style/lineStyle"/>

            <TextView
                android:id="@+id/photoTV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/phone_album_selection"
                android:gravity="center"
                android:background="@color/white"
                android:textColor="@color/c_333333"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/cancelTV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:textColor="@color/c_333333"
                android:textSize="14dp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
