<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/xj_background"
    android:orientation="vertical">

    <com.yimeng.widget.MyToolBar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/xj_background"
        app:leftIcon="@mipmap/icon_left_white"
        app:titleTextColor="@color/white"
        app:rightTextColor="@color/white"
        app:rightContent="保存"
        app:title="个人资料"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <!-- 昵称 -->
            <com.yimeng.widget.InputItemLayout
                android:id="@+id/input_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:EditTextColor="@color/white"
                android:hint="@string/input_nickname"
                android:text="@string/nickname"/>

            <!-- 性别 -->
            <com.yimeng.widget.InputItemLayout
                android:id="@+id/input_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_gender"
                android:text="@string/gender"
                app:EditTextColor="@color/white"
                app:editor="false"/>

            <!-- 手机号 -->
            <com.yimeng.widget.InputItemLayout
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:EditTextColor="@color/white"
                app:editor="false"
                android:text="@string/cellphone_number"/>

            <!-- 手机号 -->
            <com.yimeng.widget.InputItemLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editor="false"
                android:visibility="gone"
                android:hint="请绑定"
                android:text="邮箱地址"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:background="@color/xj_btn_bg"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="激活状态"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_activate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/c_333333"
                    android:background="@drawable/btn_bg_wihte_stroke_color_t3_28"
                    android:paddingBottom="6dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="6dp"
                    android:gravity="center"
                    android:layout_gravity="end|center_vertical"
                    android:text="未激活"/>


            </FrameLayout>

            <View style="@style/lineStyle"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>


            <!-- 真实姓名 -->
            <RelativeLayout
                android:id="@+id/rl_userName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/xj_btn_bg">

                <TextView
                    android:id="@+id/info_name_or_state_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/truename"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/truenameTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:background="@drawable/btn_bg_wihte_stroke_color_t3_28"
                        android:gravity="center"
                        android:paddingBottom="6dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:paddingTop="6dp"
                        android:text="@string/idcard_info"
                        android:textColor="@color/c_333333"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/statusTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:visibility="gone"
                        tools:text="雷布斯"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
