<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ll_content"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/xj_background"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:orientation="vertical">

	<com.yimeng.widget.MyToolBar
		android:id="@+id/toolBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/xj_background"
		app:leftIcon="@mipmap/icon_left_white"
		app:title="实名认证"
		app:titleTextColor="@color/white" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout style="@style/MatchWrap.Vertical">

			<LinearLayout
				style="@style/MatchWrap.Vertical"
				android:visibility="visible">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:paddingTop="@dimen/dp_10"
					android:paddingBottom="@dimen/dp_10"
					android:visibility="gone"
					android:text="一个身份证号码只能在一个事业城市服务商下面实名一次"
					android:textColor="@color/theme_color"
					android:textSize="12sp" />


				<!-- 真实姓名 -->
				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="48dp"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="12dp">

					<TextView
						android:id="@+id/name"
						style="@style/WrapWrap"
						android:layout_centerVertical="true"
						android:text="@string/truename"
						android:textColor="@color/white"
						android:textSize="14dp" />

					<EditText
						android:id="@+id/nameET"
						android:layout_width="match_parent"
						android:layout_height="36dp"
						android:layout_centerVertical="true"
						android:layout_marginLeft="12dp"
						android:layout_toRightOf="@id/name"
						android:background="@null"
						android:gravity="center_vertical"
						android:hint="@string/input_truename"
						android:textColor="@color/c_666666"
						android:textColorHint="@color/c_999999"
						android:textSize="14dp"
						tools:ignore="RtlHardcoded,TextFields" />

				</RelativeLayout>


				<!-- 身份证 -->
				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="48dp"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="12dp">

					<TextView
						android:id="@+id/idCardNo"
						style="@style/WrapWrap"
						android:layout_centerVertical="true"
						android:text="@string/idcard_number"
						android:textColor="@color/white"
						android:textSize="14dp" />

					<EditText
						android:id="@+id/idCardNoET"
						android:layout_width="match_parent"
						android:layout_height="36dp"
						android:layout_centerVertical="true"
						android:layout_marginLeft="12dp"
						android:layout_toRightOf="@id/idCardNo"
						android:background="@null"
						android:gravity="center_vertical"
						android:hint="@string/input_idcardno"
						android:maxLength="18"
						android:textColor="@color/c_666666"
						android:textColorHint="@color/c_999999"
						android:textSize="14dp"
						tools:ignore="RtlHardcoded,TextFields" />

				</RelativeLayout>


			</LinearLayout>


			<RelativeLayout
				android:id="@+id/idCardFrontRL"
				android:layout_width="match_parent"
				android:layout_height="168dp"
				android:layout_marginLeft="52dp"
				android:layout_marginTop="24dp"
				android:layout_marginRight="52dp"
				android:background="@drawable/rl_bg_wihte_stroke_c3_0"
				android:visibility="gone">

				<LinearLayout
					style="@style/WrapWrap.Vertical"
					android:layout_centerInParent="true">

					<ImageView
						android:layout_width="68dp" android:contentDescription="TODO" 
						android:layout_height="68dp"
						android:layout_gravity="center_horizontal"
						android:background="@mipmap/photo" />

					<TextView
						style="@style/WrapWrap"
						android:layout_marginTop="8dp"
						android:text="@string/idcard_front_photo"
						android:textColor="@color/white"
						android:textSize="14dp" />

				</LinearLayout>

				<ImageView
					android:id="@+id/idCardFrontSDV"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_gravity="center_horizontal"
					android:layout_margin="@dimen/dp_5"
					android:adjustViewBounds="true"
					android:background="@color/white"
					android:contentDescription="TODO" android:scaleType="centerCrop"
					android:visibility="gone" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/idCardVersoRL"
				android:layout_width="match_parent"
				android:layout_height="168dp"
				android:layout_marginLeft="52dp"
				android:layout_marginTop="16dp"
				android:layout_marginRight="52dp"
				android:background="@drawable/rl_bg_wihte_stroke_c3_0"
				android:visibility="gone">

				<LinearLayout
					style="@style/WrapWrap.Vertical"
					android:layout_centerInParent="true">

					<ImageView
						android:layout_width="68dp" android:contentDescription="TODO" 
						android:layout_height="68dp"
						android:layout_gravity="center_horizontal"
						android:background="@mipmap/photo" />

					<TextView
						style="@style/WrapWrap"
						android:layout_marginTop="8dp"
						android:text="@string/idcard_verso_photo"
						android:textColor="@color/white"
						android:textSize="14dp" />

				</LinearLayout>

				<ImageView
					android:id="@+id/idCardVersoSDV"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_gravity="center_horizontal"
					android:layout_margin="@dimen/dp_5"
					android:adjustViewBounds="true"
					android:background="@color/white"
					android:contentDescription="TODO" android:scaleType="centerCrop"
					android:visibility="gone" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/idPhotoRL"
				android:layout_width="match_parent"
				android:layout_height="168dp"
				android:layout_marginLeft="52dp"
				android:layout_marginRight="52dp"
				android:layout_marginBottom="32dp"
				android:background="@drawable/rl_bg_wihte_stroke_c3_0"
				android:visibility="gone">

				<LinearLayout
					style="@style/WrapWrap.Vertical"
					android:layout_centerInParent="true">

					<ImageView
						android:layout_width="68dp" android:contentDescription="TODO" 
						android:layout_height="68dp"
						android:layout_gravity="center_horizontal"
						android:background="@mipmap/photo" />

					<TextView
						style="@style/WrapWrap"
						android:layout_marginTop="8dp"
						android:text="@string/click_upload_idphoto"
						android:textColor="@color/c_333333"
						android:textSize="14dp" />

				</LinearLayout>

				<ImageView
					android:id="@+id/idPhotoSDV"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_gravity="center_horizontal"
					android:layout_margin="@dimen/dp_5"
					android:adjustViewBounds="true"
					android:background="@color/white"
					android:contentDescription="TODO" android:scaleType="centerCrop"
					android:visibility="gone" />

			</RelativeLayout>

		</LinearLayout>

	</ScrollView>

	<Button
		android:id="@+id/submitBTN"
		style="@style/btnThemeStyle"
		android:layout_width="match_parent"
		android:layout_height="42dp"
		android:layout_centerVertical="true"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="15dp"
		android:text="提交" />

</LinearLayout>
