<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/xj_background"
              android:orientation="vertical">

    <com.yimeng.widget.MyToolBar
        android:id="@+id/toolBar"
        app:title="添加地址"
        app:rightContent="保存"
        android:background="@color/xj_background"
        app:titleTextColor="@color/white"
        app:leftIcon="@mipmap/icon_left_white"
        app:rightTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/consigneeTV"
            style="@style/WrapWrap"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="收货人: "
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/et_consignee"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/consigneeTV"
            android:background="@null"
            android:hint="@string/input_consignee_name"
            android:inputType="text"
            android:lines="1"
            android:maxLength="12"
            android:textColor="@color/c_666666"
            android:textColorHint="@color/c_999999"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#E6E6E7" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#E6E6E7" />

        <TextView
            android:id="@+id/phoneTV"
            style="@style/WrapWrap"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/reciever_phone"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/phoneTV"
            android:layout_toRightOf="@+id/phoneTV"
            android:background="@null"
            android:digits="1234567890"
            android:hint="@string/input_reciever_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/c_666666"
            android:textColorHint="@color/c_999999"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_zipcode"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:hint="@string/zipcode"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#E6E6E7" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_region"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/districtTV"
            style="@style/WrapWrap"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/district"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="32dp"
            android:background="@null"
            android:hint="@string/region"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:contentDescription="TODO" android:src="@mipmap/right_arrow"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#E6E6E7" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_detail_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/detail_addres"
            android:inputType="" android:minHeight="48dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#E6E6E7" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <LinearLayout
            style="@style/WrapWrap.Horizontal"
            android:layout_centerVertical="true">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchcompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:visibility="gone"
                tools:ignore="RtlHardcoded" />

            <FrameLayout
                android:id="@+id/checkFL"
                android:layout_width="42dp"
                android:layout_height="42dp">

                <ImageView
                    android:id="@+id/checkSDV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:background="@mipmap/kd_round"
                    android:contentDescription="TODO" tools:ignore="RtlHardcoded" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/setting_default"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="14dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#E6E6E7" />

    </RelativeLayout>


</LinearLayout>
